[tool.poetry]
name = "finance-apis-adventures"
version = "0.1.0"
description = ""
authors = ["Pedro Pozzi Ferreira <pedropozzif@gmail.com>"]
license = "GNU Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
yfinance = "^0.1.59"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
